...
        bottomC.isActive = true
        alignY.isActive = true
        
        // Setup image view
        imageView = LoadableImageView(frame: .zero)
        imageView.fadeEnabled = false
        imageView.accessibilityIdentifier = "Image"
        contentView.addSubview(imageView)
        imageView.translatesAutoresizingMaskIntoConstraints = false
        contentView.leftAnchor.constraint(equalTo: imageView.leftAnchor).isActive = true
        contentView.rightAnchor.constraint(equalTo: imageView.rightAnchor).isActive = true
        contentView.topAnchor.constraint(equalTo: imageView.topAnchor).isActive = true
        imageView.heightAnchor.constraint(equalTo: self.heightAnchor, multiplier: relativeImageHeight).isActive = true
...
            size: keysFontBase.pointSize)
        
        titleKeyLabel = UILabel(frame: .zero)
        titleKeyLabel.textColor = .white
        titleKeyLabel.numberOfLines = 0
        titleKeyLabel.font = keysFont
        titleKeyLabel.text = String(localized: "Title", table: "Detail", comment: "List: Description for the APODs title attribute.")
        titleKeyLabel.accessibilityIdentifier = "Title"
        detailsKeysContainer.addArrangedSubview(titleKeyLabel)
        titleKeyLabel.translatesAutoresizingMaskIntoConstraints = false

        copyrightKeyLabel = UILabel(frame: .zero)
        copyrightKeyLabel.textColor = .white
        copyrightKeyLabel.numberOfLines = 0
        copyrightKeyLabel.font = keysFont
        copyrightKeyLabel.text = String(localized: "Source", table: "Detail", comment: "List: Description for the APODs copyright attribute.")
        copyrightKeyLabel.accessibilityIdentifier = "Source"
        detailsKeysContainer.addArrangedSubview(copyrightKeyLabel)
        copyrightKeyLabel.translatesAutoresizingMaskIntoConstraints = false

        dateKeyLabel = UILabel(frame: .zero)
        dateKeyLabel.textColor = .white
        dateKeyLabel.numberOfLines = 0
        dateKeyLabel.font = keysFont
        dateKeyLabel.text = String(localized: "Date", table: "Detail", comment: "List: Description for the APODs date attribute.")
        dateKeyLabel.accessibilityIdentifier = "Date"
        detailsKeysContainer.addArrangedSubview(dateKeyLabel)
        dateKeyLabel.translatesAutoresizingMaskIntoConstraints = false
        
        videoKeyLabel = UILabel(frame: .zero)
        videoKeyLabel.textColor = .white
        videoKeyLabel.numberOfLines = 0
        videoKeyLabel.font = keysFont
        videoKeyLabel.text = String(localized: "Video", table: "Detail", comment: "List: Description for the APODs video attribute.")
        videoKeyLabel.accessibilityIdentifier = "Video"
        detailsKeysContainer.addArrangedSubview(videoKeyLabel)
        videoKeyLabel.translatesAutoresizingMaskIntoConstraints = false

        // Fill values stack
        titleValueLabel = UILabel(frame: .zero)
        titleValueLabel.textColor = .white
        titleValueLabel.numberOfLines = 0
        titleValueLabel.accessibilityIdentifier = "TitleValue"
        detailsValuesContainer.addArrangedSubview(titleValueLabel)
        titleValueLabel.translatesAutoresizingMaskIntoConstraints = false
        titleValueLabel.heightAnchor.constraint(equalTo: titleKeyLabel.heightAnchor).isActive = true

        copyrightValueLabel = UILabel(frame: .zero)
        copyrightValueLabel.textColor = .white
        copyrightValueLabel.numberOfLines = 0
        copyrightValueLabel.accessibilityIdentifier = "CopyrightValue"
        detailsValuesContainer.addArrangedSubview(copyrightValueLabel)
        copyrightValueLabel.translatesAutoresizingMaskIntoConstraints = false
        copyrightValueLabel.heightAnchor.constraint(equalTo: copyrightKeyLabel.heightAnchor).isActive = true

        dateValueLabel = UILabel(frame: .zero)
        dateValueLabel.textColor = .white
        dateValueLabel.numberOfLines = 0
        dateValueLabel.accessibilityIdentifier = "DateValue"
        detailsValuesContainer.addArrangedSubview(dateValueLabel)
        dateValueLabel.translatesAutoresizingMaskIntoConstraints = false
        dateValueLabel.heightAnchor.constraint(equalTo: dateKeyLabel.heightAnchor).isActive = true
        
        videoWatchButton = UIButton(type: .system)
        videoWatchButton.accessibilityIdentifier = "Watch"
        videoWatchButton.setTitle(String(localized: "Watch", table: "Detail", comment: "List: Title for the watch APOD's video button."), for: .normal)
        videoWatchButton.addTarget(self, action: #selector(watchVideo), for: .touchUpInside)
        detailsValuesContainer.addArrangedSubview(videoWatchButton)
        videoWatchButton.translatesAutoresizingMaskIntoConstraints = false
        videoWatchButton.heightAnchor.constraint(equalTo: videoKeyLabel.heightAnchor).isActive = true
        
...
        separatorView.heightAnchor.constraint(equalToConstant: 1).isActive = true

        // Add explanation label
        explanationLabel = UILabel(frame: .zero)
        explanationLabel.numberOfLines = 0
        explanationLabel.textColor = .white
        explanationLabel.accessibilityIdentifier = "Explanation"
        
        contentView.addSubview(explanationLabel)
        explanationLabel.translatesAutoresizingMaskIntoConstraints = false
        explanationLabel.topAnchor.constraint(equalTo: detailsContainer.bottomAnchor, constant: 40).isActive = true
        contentView.leftAnchor.constraint(equalTo: explanationLabel.leftAnchor, constant: -20).isActive = true
        contentView.rightAnchor.constraint(equalTo: explanationLabel.rightAnchor, constant: 20).isActive = true
...
        self.topAnchor.constraint(equalTo: topBar.topAnchor).isActive = true
        topBar.heightAnchor.constraint(equalToConstant: 60).isActive = true
        
        // Add dismiss button
        dismissButton = UIButton(type: .close)
        dismissButton.overrideUserInterfaceStyle = .dark
        dismissButton.accessibilityIdentifier = "Dismiss"
        topBar.addSubview(dismissButton)
        dismissButton.translatesAutoresizingMaskIntoConstraints = false
        topBar.centerYAnchor.constraint(equalTo: dismissButton.centerYAnchor).isActive = true
        topBar.rightAnchor.constraint(equalTo: dismissButton.rightAnchor, constant: 20).isActive = true
        
        dismissButton.addTarget(self, action: #selector(dismiss), for: .touchUpInside)
...
