...
        collectionView.delegate = self
        collectionView.dataSource = self
        collectionView.register(APODCellView.self, forCellWithReuseIdentifier: cellReuseId)
        collectionView.showsVerticalScrollIndicator = false
        collectionView.backgroundColor = .clear
        collectionView.contentInsetAdjustmentBehavior = .never
        collectionView.accessibilityIdentifier = "APODList"
        
        // Add UICollectionView to subviews
        self.addSubview(collectionView)
        collectionView.translatesAutoresizingMaskIntoConstraints = false
        leftAnchor.constraint(equalTo: collectionView.leftAnchor).isActive = true
        rightAnchor.constraint(equalTo: collectionView.rightAnchor).isActive = true
...
        typedHeaderView.apodCache = self.apodCache
        
        // Setup tap gesture for header
        let tapGesture = UITapGestureRecognizer(target: self, action: #selector(didTapHighlightView(_:)))
        typedHeaderView.addGestureRecognizer(tapGesture)
        
        typedHeaderView.accessibilityIdentifier = "Highlight"
        
        return typedHeaderView
    }
    
    func collectionView(_ collectionView: UICollectionView, layout collectionViewLayout: UICollectionViewLayout, referenceSizeForHeaderInSection section: Int) -> CGSize {
        return CGSize(width: collectionView.frame.width, height: collectionView.frame.height * 0.75)
...
